--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,25 @@
-name: Docker Image CI
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push]
 
 jobs:
   test:
-    name: Execute the unit tests
+
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: 1.15
+
+      - name: Build
+        run: go build -v ./...
+
+      - name: Test
+        run: go test -v ./...
         
-      - name: Install golang
-        run: |
-          wget https://go.dev/dl/go1.20.3.linux-amd64.tar.gz
-          tar -xf go1.20.3.linux-amd64.tar.gz
-          sudo mv go /usr/local
-          export PATH=$PATH:/usr/local/go/bin
-          go version
-          
-      - name: Run the tests
-        run: |
-          go test -v ./pkg/handlers
-  
   push_to_registry:
+    needs: test
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
