--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
           go-version: 1.20.3
 
       - name: Build
-        run: go build -v ./cmd
+        run: go build -v ./cmd/main.go
 
       - name: Test
         run: go test -v ./...
