--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 on: [push]
 
+env:
+  IMAGE_NAME: product-api-go
+
 jobs:
   test:
 
@@ -36,8 +39,8 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: moaabb/product-api-go
-          tags: latest
+          images: ${{ github.actor }}/${{ env.IMAGE_NAME }}
+          tags: ${{ github.run_number }}
       
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
@@ -45,5 +48,15 @@ jobs:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}    
+          labels: ${{ steps.meta.outputs.labels }}
+      
+      - name: Repository Dispatch
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.PAT }}
+          repository: ${{ github.actor }}/infra-kube
+          event-type: new-image
+          client-payload: '{"image": "${{ github.actor }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}"}'
+
+
    
